# ChangeLog for app-office/gnucash
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/gnucash/ChangeLog,v 1.177 2008/11/30 10:49:52 armin76 Exp $

  30 Nov 2008; Raúl Porcel <armin76@gentoo.org> gnucash-2.2.7.ebuild:
  alpha/sparc stable wrt #248273

  28 Nov 2008; Markus Meier <maekke@gentoo.org> gnucash-2.2.7.ebuild:
  amd64/x86 stable, bug #248273

  23 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  gnucash-2.2.7.ebuild:
  ppc stable, bug #248273

*gnucash-2.2.7 (27 Sep 2008)

  27 Sep 2008; Torsten Veller <tove@gentoo.org> -gnucash-2.2.5.ebuild,
  +gnucash-2.2.7.ebuild:
  Version bump. Cleanup

  10 Sep 2008; Raúl Porcel <armin76@gentoo.org> gnucash-2.2.6.ebuild:
  alpha stable wrt #236968

  09 Sep 2008; Ferris McCormick <fmccor@gentoo.org> gnucash-2.2.6.ebuild:
  Sparc stable --- Bug #236968 --- nice.

  09 Sep 2008; Brent Baude <ranger@gentoo.org> gnucash-2.2.6.ebuild:
  stable ppc, bug 236968

  07 Sep 2008; Markus Meier <maekke@gentoo.org> gnucash-2.2.6.ebuild:
  amd64/x86 stable, bug #236968

  31 Jul 2008; Torsten Veller <tove@gentoo.org> -files/SplitP.h.patch:
  Remove old file

*gnucash-2.2.6 (31 Jul 2008)

  31 Jul 2008; Torsten Veller <tove@gentoo.org> metadata.xml,
  +gnucash-2.2.6.ebuild:
  Version bump. Add useflags to metadata.

  27 Jun 2008; Torsten Veller <tove@gentoo.org> -gnucash-2.2.3.ebuild,
  -gnucash-2.2.4.ebuild:
  Cleaning

  25 Jun 2008; Markus Meier <maekke@gentoo.org> gnucash-2.2.5.ebuild:
  x86 stable, bug #225399

  14 Jun 2008; nixnut <nixnut@gentoo.org> gnucash-2.2.5.ebuild:
  Stable on ppc wrt bug 225399

  11 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> gnucash-2.2.5.ebuild:
  amd64 stable, bug #225399

  11 Jun 2008; Raúl Porcel <armin76@gentoo.org> gnucash-2.2.5.ebuild:
  alpha stable wrt #225399

  09 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> gnucash-2.2.5.ebuild:
  stable on sparc, bug #225399

*gnucash-2.2.5 (28 Apr 2008)
