@@ -1,6 +1,16 @@
-DIST gnucash-2.2.6.tar.bz2 7224677 RMD160 2db7cd24c653bbf7dc7946e8e95d5ebc9c3b5d88 SHA1 b4d03037358b956e20f8c3290d32985b4398af17 SHA256 4ecf729acacc04530f87c03c5d5f53f027b9aa79ece85ac9d92ca48e74bba26d
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gnucash-2.2.7.tar.lzma 4929852 RMD160 a660bd657992abba9f03a2398460fce475f5b170 SHA1 cae106092a3e8072a4d6239b95dcd616cf96f717 SHA256 ea6bc5ecd220cd2c9fb96fdbff80bf3aba057ce9dd42818dd5a2a0630b8d2384
-EBUILD gnucash-2.2.6.ebuild 2507 RMD160 11a69985e86f0f252aef56b7f4b5128bde4a10f6 SHA1 03bbf51dbae1ee947d155d7da3e926a87829a01a SHA256 b87c337e6dbd63e95b58889fb80ebff93be46365668d00ec94dd75bd2940f024
+DIST gnucash-2.2.8.tar.lzma 4989450 RMD160 d3c2cf32c719debee55690db603329788644cc26 SHA1 804feb9e17f976186cfdb4e829064d60923571f8 SHA256 a106dc2ceac8867a81f0cc27345901c9c43c482fb57f86c1aaa2fd94e9d1c74e
 EBUILD gnucash-2.2.7.ebuild 2523 RMD160 c772e75a2e4615b7450a7aa58386125557a6fea2 SHA1 c5234c19ab209cd76f51f60ad9662e50f605818b SHA256 336dc9456ea7f2a931626e7d12219a28e079b6d2ee4753bbf2c8b8a5178515f1
-MISC ChangeLog 26242 RMD160 289f681dbf6e7a9c84db84dce7739c9c8f1117b2 SHA1 180a711e2d9e82f09fd2b8a719e0d5c0ddc23ab4 SHA256 fc20f50237d91e03dafaf1fec8e87f714477bf382ccea202911596ae2780bec7
+EBUILD gnucash-2.2.8.ebuild 2524 RMD160 d7e9a4e99d16a81a943e2b6bf0f59691b6e7c545 SHA1 8861cace2799462f4a572f0bb9a6cee31b873e95 SHA256 331db837d1517593b1f4b4852cbea710fe277224ede57c61cea67fcc29c6b2b2
+MISC ChangeLog 26390 RMD160 08a8d3621cd6087cec8ddf4b905890afeac0fbdc SHA1 3ec10863e32e1043aa40cde2daaea06da2dd8831 SHA256 c755e7024c4ec4ebd37df9f2f87a7b62edfc90a8cb0b9a7046001504f99d887c
 MISC metadata.xml 501 RMD160 0608e775e9516bf846268a4d146b40351fd804a0 SHA1 8225165b398f7c868a219a6ebdb327876c6521e8 SHA256 4b87e843fd908496e5a136d5671d5a0c12276fd18b7e13e39d247088af3669c2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAklGHbUACgkQV3J2n04EauyKnwCgxzvvWWtNtpB8JybCKIZouV62
+3b0AoK55He8gX8f/ObvlSI9ohkVYDEv6
+=v18j
+-----END PGP SIGNATURE-----
