@@ -1,6 +1,12 @@
 # ChangeLog for app-office/gnucash
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/gnucash/ChangeLog,v 1.177 2008/11/30 10:49:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/gnucash/ChangeLog,v 1.178 2008/12/15 09:05:10 tove Exp $
+
+*gnucash-2.2.8 (15 Dec 2008)
+
+  15 Dec 2008; Torsten Veller <tove@gentoo.org> -gnucash-2.2.6.ebuild,
+  +gnucash-2.2.8.ebuild:
+  Version bump. Cleanup
 
   30 Nov 2008; Raúl Porcel <armin76@gentoo.org> gnucash-2.2.7.ebuild:
   alpha/sparc stable wrt #248273
